@@ -1,4 +1,4 @@
-$Id: History,v 1.14 2002-02-03 22:23:23 perl Exp $
+$Id: History,v 1.15 2002-02-05 19:51:56 perl Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -19,6 +19,11 @@ committal in the CVS repository !
 
 History file for visualization/HepRep sub-category
 ---------------------------------------------------------------------------
+
+4th February 2002  Joseph Perl
+- Check for missing hierarchy layers in HepRepXMLWriter.
+  (Not strictly needed since have a culled layer check in SceneHandler,
+  but may be useful in other applications of HepRepXMLWriter).
 
 3rd February 2002  Joseph Perl
 - Detect transient data by testing for
